themes/yeldirium/source-raw/scss/component/_post.scss
.post {
  &__meta {
    display: flex;
    flex-direction: column;
  }

  &__date, &__category, &__tag {
    margin-bottom: 0.25rem;

    color: $color-gray-light;

    a {
      text-decoration: none;
    }
  }

  &__navigation {
    &-list {
      display: grid;
      grid-template-columns: 1fr 1fr;

      padding: 0;

      list-style: none;
    }

    &-prev {
      justify-self: flex-start;
      grid-column: 1/2
    }

    &-next {
      justify-self: flex-end;
      grid-column: 2/3
    }

    &-prev, &-next {
      a {
        color: $color-gray-light;
        text-decoration: none;
      }
    }
  }
}

@media only screen and (min-width: $md-min-width) {
  .post {
    &__meta {
      display: block;
    }

    &__date, &__category, &__tag {
      margin-right: 1rem;
    }
  }
}

